# tap-toggl

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml
tap_toggl/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
